--- a/client/src/App.css
+++ b/client/src/App.css
@@ -203,3 +203,276 @@
 .shop-container p{
     color: rgb(157, 178, 191);
 }
+
+.category-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: rgb(82, 109, 130);
+}
+
+.category-cards{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.create-button {
+    margin-top: 20px;
+    color: rgb(82, 109, 130);
+    background-color: rgb(221, 230, 237);
+    border: none;
+    width: 250px;
+    height: 50px;
+    font-size: 24px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: border 0.25s;
+}
+
+.create-button:hover{
+    border: 2px solid rgb(39, 55, 77);
+}
+
+
+
+.grocery-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: rgb(82, 109, 130);
+}
+
+.grocery-cards{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.create-button {
+    margin-top: 20px;
+    color: rgb(82, 109, 130);
+    background-color: rgb(221, 230, 237);
+    border: none;
+    width: 250px;
+    height: 50px;
+    font-size: 24px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: border 0.25s;
+}
+
+.create-button:hover{
+    border: 2px solid rgb(39, 55, 77);
+}
+
+
+.grocery-card {
+    color: rgb(82, 109, 130);
+    background-color: rgb(221, 230, 237);
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border-radius: 20px;
+    align-items: center;
+}
+
+.Create-Category-Container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Create-Category-Container h1{
+    color: rgb(39, 55, 77);
+}
+
+.Create-Category-Container form{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.Create-Category-Container form div{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+textarea {
+    resize: none;
+}
+
+.Create-Category-Container textarea{
+ width: 400px;
+ height: 200px;
+ background-color: rgb(221, 230, 237);
+ border: none;
+ border-radius: 10px;
+ padding: 10px;
+ color: rgb(39, 55, 77);
+ transition: border 0.25s;
+}
+
+
+.Create-Category-Container textarea:focus{
+    border: 2px solid rgb(39, 55, 77);
+}
+
+.Create-Category-Container textarea::placeholder{
+    color: rgb(39, 55, 77);
+}
+
+
+.Create-Category-Container input{
+    width: 400px;
+    background-color: rgb(221, 230, 237);
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    color: rgb(39, 55, 77);
+    transition: border 0.25s;
+   }
+
+.Create-Category-Container input:focus{
+    border: 2px solid rgb(39, 55, 77);  
+}   
+
+.Create-Category-Container input::placeholder{
+    color: rgb(39, 55, 77);
+}
+
+.Create-Category-Container input::placeholder{
+    color: rgb(39, 55, 77);
+}
+
+.Create-Category-Container form button{
+    padding: 15px;
+    font-size: 24px;
+    border: none;
+    border-radius: 15px;
+    color: rgb(39, 55, 77);
+    background-color: rgb(221, 230, 237);
+    transition: 0.25s border;
+}
+
+.Create-Category-Container form button:hover{
+    border: 2px solid rgb(39, 55, 77);
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+.Create-Grocery-Container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Create-Grocery-Container h1{
+    color: rgb(39, 55, 77);
+}
+
+.Create-Grocery-Container form{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.Create-Grocery-Container form div{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.Create-Grocery-Container textarea{
+ width: 400px;
+ height: 200px;
+ background-color: rgb(221, 230, 237);
+ border: none;
+ border-radius: 10px;
+ padding: 10px;
+ color: rgb(39, 55, 77);
+ transition: border 0.25s;
+}
+
+
+.Create-Grocery-Container textarea:focus{
+    border: 2px solid rgb(39, 55, 77);
+}
+
+.Create-Grocery-Container textarea::placeholder{
+    color: rgb(39, 55, 77);
+}
+
+
+.Create-Grocery-Container input{
+    width: 400px;
+    background-color: rgb(221, 230, 237);
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    color: rgb(39, 55, 77);
+    transition: border 0.25s;
+   }
+
+.Create-Grocery-Container input:focus{
+    border: 2px solid rgb(39, 55, 77);  
+}   
+
+.Create-Grocery-Container input::placeholder{
+    color: rgb(39, 55, 77);
+}
+
+.Create-Grocery-Container input::placeholder{
+    color: rgb(39, 55, 77);
+}
+
+.Create-Grocery-Container form button{
+    padding: 15px;
+    font-size: 24px;
+    border: none;
+    border-radius: 15px;
+    color: rgb(39, 55, 77);
+    background-color: rgb(221, 230, 237);
+    transition: 0.25s border;
+}
+
+.Create-Grocery-Container form button:hover{
+    border: 2px solid rgb(39, 55, 77);
+    cursor: pointer;
+}
+
+.Create-Grocery-Container select{
+    background-color: rgb(221, 230, 237);
+
+    color: rgb(39, 55, 77);
+}
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;    
+    appearance: none;        
+    border: 1px solid #ccc;
+    padding: 8px;
+    border-radius: 6px;
+    background-color: white;
+    box-shadow: none;  
+  }
