--- a/client/src/App.css
+++ b/client/src/App.css
@@ -484,3 +484,11 @@ select {
     border-radius: 20px;
     width: 500px;
 }
+
+.grocery-detail  {
+    color:rgb(221, 230, 237);
+    background-color: rgb(39, 55, 77);
+    padding: 20px;
+    border-radius: 20px;
+    width: 500px;
+}
