--- a/client/src/App.css
+++ b/client/src/App.css
@@ -492,3 +492,25 @@ select {
     border-radius: 20px;
     width: 500px;
 }
+
+.grocery-form{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.grocery-form input{
+    width: 400px;
+    background-color: rgb(221, 230, 237);
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    color: rgb(39, 55, 77);
+    transition: border 0.25s;
+}
+
+.grocery-form input:focus{
+    border: 2px solid rgb(39, 55, 77);  
+}
